feat(load-game-ui): replace simple slot picker with rich LoadGameDialog [I1]
I1 - LoadGameDialog (new): modal dialog for loading saves from main menu that
     displays full slot metadata per spec requirements: slot name, turn number,
     current season (with emoji), TH level, real save time, and save version.
     Empty slots shown as '[ EMPTY ]', legacy format (v1.x) shows limited info
     with a 'Legacy' badge. Single-click selects a card with blue highlight,
     double-click loads immediately. Load button in footer activates on selection
     and shows the selected slot name. Escape key cancels.
     Styled consistently with game dark/gold theme (UIConfig).

I1 - MainMenuPanel: replace JOptionPane.showInputDialog (showed only slot names)
     with new LoadGameDialog. Added pre-check: if all slots are empty, shows a
     friendly 'No Save Files Found' message instead of an empty dialog.
     Null/blank slot selection is safely ignored (dialog was cancelled).